[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.coverage.run]
branch = true
parallel = true

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.pylint.'MESSAGE CONTROL']
disable = ["fixme", "missing-function-docstring"]

[tool.pytest.ini_options]
addopts = "-ra -q"
minversion = 6.0
testpaths = "tests"

[tool.tbump]
github_url = "https://github.com/demberto/tkinter-msgcat/"

[tool.tbump.version]
current = "0.1.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "VERSION"

[[tool.tbump.before_commit]]
name = "check changelog"
cmd = "git grep -q {new_version} CHANGELOG.md"
