[metadata]
name = tkinter_msgcat
version = file: VERSION
description = Create multilingual interfaces for your tkinter applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/demberto/tkinter-msgcat
author = demberto
author_email = demberto@protonmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords =
    i18n, tkinter, msgcat

[options]
packages = tkmsgcat
python_requires = >=3.7
